_generated-doc/2.2/config/quarkus-oidc-common-config-group-oidc-common-config-credentials.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-common-config-group-oidc-common-config-credentials_configuration]]link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.secret]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.secret[quarkus.oidc.credentials.secret]`

[.description]
--
Client secret which is used for a `client_secret_basic` authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.value]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.value[quarkus.oidc.credentials.client-secret.value]`

[.description]
--
The client secret value - it will be ignored if 'secret.key' is set
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.provider.name]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.provider.name[quarkus.oidc.credentials.client-secret.provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.provider.key]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.provider.key[quarkus.oidc.credentials.client-secret.provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.method]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.client-secret.method[quarkus.oidc.credentials.client-secret.method]`

[.description]
--
Authentication method.
--|`basic`, `post` 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.secret]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.secret[quarkus.oidc.credentials.jwt.secret]`

[.description]
--
If provided, indicates that JWT is signed using a secret key
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.secret-provider.name]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.secret-provider.name[quarkus.oidc.credentials.jwt.secret-provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.secret-provider.key]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.secret-provider.key[quarkus.oidc.credentials.jwt.secret-provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-file]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-file[quarkus.oidc.credentials.jwt.key-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-store-file]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-store-file[quarkus.oidc.credentials.jwt.key-store-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key from a key store
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-store-password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-store-password[quarkus.oidc.credentials.jwt.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-id]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-id[quarkus.oidc.credentials.jwt.key-id]`

[.description]
--
The private key id/alias
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.key-password[quarkus.oidc.credentials.jwt.key-password]`

[.description]
--
The private key password
--|string 
|`password`


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.token-key-id]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.token-key-id[quarkus.oidc.credentials.jwt.token-key-id]`

[.description]
--
Key identifier of the signing key added as a JWT 'kid' header
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.lifespan]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.credentials.jwt.lifespan[quarkus.oidc.credentials.jwt.lifespan]`

[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.
--|int 
|`10`


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.secret]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.secret[quarkus.oidc."tenant".credentials.secret]`

[.description]
--
Client secret which is used for a `client_secret_basic` authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.value]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.value[quarkus.oidc."tenant".credentials.client-secret.value]`

[.description]
--
The client secret value - it will be ignored if 'secret.key' is set
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.provider.name]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.provider.name[quarkus.oidc."tenant".credentials.client-secret.provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.provider.key]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.provider.key[quarkus.oidc."tenant".credentials.client-secret.provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.method]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.client-secret.method[quarkus.oidc."tenant".credentials.client-secret.method]`

[.description]
--
Authentication method.
--|`basic`, `post` 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.secret]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.secret[quarkus.oidc."tenant".credentials.jwt.secret]`

[.description]
--
If provided, indicates that JWT is signed using a secret key
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.secret-provider.name]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.secret-provider.name[quarkus.oidc."tenant".credentials.jwt.secret-provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.secret-provider.key]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.secret-provider.key[quarkus.oidc."tenant".credentials.jwt.secret-provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-file]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-file[quarkus.oidc."tenant".credentials.jwt.key-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-store-file]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-store-file[quarkus.oidc."tenant".credentials.jwt.key-store-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key from a key store
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-store-password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-store-password[quarkus.oidc."tenant".credentials.jwt.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-id]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-id[quarkus.oidc."tenant".credentials.jwt.key-id]`

[.description]
--
The private key id/alias
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.key-password[quarkus.oidc."tenant".credentials.jwt.key-password]`

[.description]
--
The private key password
--|string 
|`password`


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.token-key-id]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.token-key-id[quarkus.oidc."tenant".credentials.jwt.token-key-id]`

[.description]
--
Key identifier of the signing key added as a JWT 'kid' header
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.lifespan]]`link:#quarkus-oidc-common-config-group-oidc-common-config-credentials_quarkus.oidc.-tenant-.credentials.jwt.lifespan[quarkus.oidc."tenant".credentials.jwt.lifespan]`

[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.
--|int 
|`10`

|===